--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <div class="project">
       <h3>Project 1</h3>
       <p> Hello! I’m Aswitha R, a passionate  with a keen eye for detail and a love for creativity. This portfolio is a curated collection of my work, showcasing my skills, experiences, and the projects that inspire me....</p>
-      <a href="https://github.com/Manisha63699/PersonalPortfolio-NM-/tree/main" target="_blank">GitHub Repo</a>
-    </div>
+      <a href=target="_blank">GitHub Repo</a>
+    </div>https://github.com/aswithasivu/Personal-Profile-NM/tree/main#personal-profile-nm
    
   </section>
 
